Se creó con Colab

--- a/Fix_Lora_Trainer_XL.ipynb
+++ b/Fix_Lora_Trainer_XL.ipynb
@@ -27,6 +27,13 @@
     },
     {
       "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "jsO070Ji621K"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "vJ8clWTZEu-g"
       },
@@ -102,7 +109,7 @@
         "project_name = project_name.strip()\n",
         "#@markdown La estructura de carpetas no importa y es puramente por comodidad. Asegúrate de elegir siempre el mismo.  Me gusta organizar por proyecto.\n",
         "folder_structure = \"Organize by project (MyDrive/Loras/project_name/dataset)\" #@param [\"Organize by category (MyDrive/lora_training/datasets/project_name)\", \"Organize by project (MyDrive/Loras/project_name/dataset)\"]\n",
-        "#@markdown Decida el modelo que se descargará y utilizará para el entrenamiento. También puedes usar un modelo personalizado pegando su enlace de descarga directa.\n",
+        "#@markdown Decida el modelo que se descargará y utilizará para el entrenamiento. También puedes elegir tu propio modelo pegando su enlace de descarga o un archivo en tu Google Drive que comience con `/content/drive/MyDrive`.\n",
         "training_model = \"Pony Diffusion V6 XL\" #@param [\"Pony Diffusion V6 XL\", \"Animagine XL V3\", \"Stable Diffusion XL 1.0 base\"]\n",
         "optional_custom_training_model_url = \"\" #@param {type:\"string\"}\n",
         "#@markdown El uso de un modelo en diffusers utiliza menos recursos. Las 3 opciones anteriores funcionarán con o sin diffusers.\n",
@@ -140,7 +147,7 @@
         "#@markdown ### ▶️ Processing\n",
         "#@markdown Por defecto la resolución para personajes es 1024, para estilos tambien puedes usar 768 o dejarlo en 1024.\n",
         "resolution = 1024 #@param {type:\"number\", min:768, max:1536, step:128}\n",
-        "caption_extension = \".txt\" #param {type:\"string\"}\n",
+        "caption_extension = \".txt\" # @param [\".txt\",\".caption\"]\n",
         "#@markdown Mezcla etiquetas de anime, mejora el aprendizaje y las indicaciones.  Una etiqueta de activación va al comienzo de cada archivo de texto y no se mezclará.<p>\n",
         "shuffle_tags = True #@param {type:\"boolean\"}\n",
         "shuffle_caption = shuffle_tags\n",
@@ -260,7 +267,7 @@
         "\n",
         "# 👩‍💻 Cool code goes here\n",
         "\n",
-        "root_dir = \"/content\" if COLAB else \"~/Loras\"\n",
+        "root_dir = \"/content\" if COLAB else pathlib.Path.home() / \"Loras\"\n",
         "deps_dir = os.path.join(root_dir, \"deps\")\n",
         "repo_dir = os.path.join(root_dir, \"kohya-trainer\")\n",
         "\n",
@@ -294,7 +301,7 @@
         "  !apt -y install aria2 -qq\n",
         "  !pip install torch==2.3.1+cu121 accelerate==0.19.0 transformers==4.30.2 diffusers==0.18.2 bitsandbytes==0.40.0.post4 opencv-python==4.7.0.68 jax==0.4.23 jaxlib==0.4.23\n",
         "  !pip install pytorch-lightning==1.9.0 voluptuous==0.13.1 toml==0.10.2 ftfy==6.1.1 einops==0.6.0 safetensors pygments\n",
-        "  !pip install huggingface-hub==0.23.5 invisible-watermark==0.2.0 open-clip-torch==2.20.0 dadaptation==3.1 prodigyopt==1.0 lion-pytorch==0.1.2 wandb\n",
+        "  !pip install huggingface-hub invisible-watermark==0.2.0 open-clip-torch==2.20.0 dadaptation==3.1 prodigyopt==1.0 lion-pytorch==0.1.2 wandb\n",
         "  !pip install -e .\n",
         "  if cross_attention == \"xformers\":\n",
         "    !pip install -q xformers==0.0.26.dev778\n",
@@ -320,14 +327,19 @@
         "  os.environ[\"SAFETENSORS_FAST_GPU\"] = \"1\"\n",
         "\n",
         "def validate_dataset():\n",
-        "  global lr_warmup_steps, lr_warmup_ratio, caption_extension, keep_tokens\n",
+        "  global lr_warmup_steps, lr_warmup_ratio, caption_extension, keep_tokens, model_url\n",
         "  supported_types = (\".png\", \".jpg\", \".jpeg\", \".webp\", \".bmp\")\n",
+        "\n",
+        "  if model_url.startswith(\"/content/drive/\") and not os.path.exists(model_url):\n",
+        "    print(\"💥 Error: The custom training model you specified was not found in your Google Drive.\")\n",
+        "    return\n",
         "\n",
         "  print(\"\\n💿 Checking dataset...\")\n",
         "  if not project_name.strip() or any(c in project_name for c in \" .()\\\"'\\\\/\"):\n",
         "    print(\"💥 Error: Please choose a valid project name.\")\n",
         "    return\n",
         "\n",
+        "  # Find the folders and files\n",
         "  if custom_dataset:\n",
         "    try:\n",
         "      datconf = toml.loads(custom_dataset)\n",
@@ -346,6 +358,7 @@
         "    files = os.listdir(images_folder)\n",
         "    images_repeats = {images_folder: (len([f for f in files if f.lower().endswith(supported_types)]), num_repeats)}\n",
         "\n",
+        "  # Validation\n",
         "  for folder in folders:\n",
         "    if not os.path.exists(folder):\n",
         "      print(f\"💥 Error: The folder {folder.replace('/content/drive/', '')} doesn't exist.\")\n",
@@ -354,13 +367,22 @@
         "    if not img:\n",
         "      print(f\"💥 Error: Your {folder.replace('/content/drive/', '')} folder is empty.\")\n",
         "      return\n",
+        "  test_files = []\n",
         "  for f in files:\n",
-        "    if not f.lower().endswith((\".txt\", \".npz\")) and not f.lower().endswith(supported_types):\n",
+        "    if not f.lower().endswith((caption_extension, \".npz\")) and not f.lower().endswith(supported_types):\n",
         "      print(f\"💥 Error: Invalid file in dataset: \\\"{f}\\\". Aborting.\")\n",
         "      return\n",
+        "    for ff in test_files:\n",
+        "      if f.endswith(supported_types) and ff.endswith(supported_types) \\\n",
+        "          and os.path.splitext(f)[0] == os.path.splitext(ff)[0]:\n",
+        "        print(f\"💥 Error: The files {f} and {ff} cannot have the same name. Aborting.\")\n",
+        "        return\n",
+        "    test_files.append(f)\n",
         "\n",
-        "  if not [txt for txt in files if txt.lower().endswith(\".txt\")]:\n",
+        "  if caption_extension and not [txt for txt in files if txt.lower().endswith(caption_extension)]:\n",
         "    caption_extension = \"\"\n",
+        "\n",
+        "  # Pretty stuff\n",
         "\n",
         "  pre_steps_per_epoch = sum(img*rep for (img, rep) in images_repeats.values())\n",
         "  steps_per_epoch = pre_steps_per_epoch/train_batch_size\n",
@@ -499,65 +521,94 @@
         "\n",
         "def download_model():\n",
         "  global old_model_url, model_url, model_file, vae_url, vae_file\n",
-        "  real_model_url = model_url.strip()\n",
+        "  real_model_url = model_url  # There was a reason for having a separate variable but I forgot what it was.\n",
         "\n",
-        "  if load_diffusers:\n",
-        "    if 'huggingface.co' in real_model_url:\n",
-        "        match = re.search(r'huggingface\\.co/([^/]+)/([^/]+)', real_model_url)\n",
-        "        if match:\n",
-        "            username = match.group(1)\n",
-        "            model_name = match.group(2)\n",
-        "            model_file = f\"{username}/{model_name}\"\n",
-        "            fs = HfFileSystem()\n",
-        "            existing_folders = set(fs.ls(model_file, detail=False))\n",
-        "            necessary_folders = [ \"scheduler\", \"text_encoder\", \"text_encoder_2\", \"tokenizer\", \"tokenizer_2\", \"unet\", \"vae\" ]\n",
-        "            if all(f\"{model_file}/{folder}\" in existing_folders for folder in necessary_folders):\n",
-        "              print(\"🍃 Diffusers model identified.\")\n",
-        "              return True\n",
-        "    print(\"🍃 Failed to load Diffusers model.\")\n",
+        "  if real_model_url.startswith(\"/content/drive/\"):\n",
+        "    # Local model, already checked to exist\n",
+        "    model_file = real_model_url\n",
+        "    print(f\"📁 Using local model file: {model_file}\")\n",
+        "    # Validation\n",
+        "    if model_file.lower().endswith(\".safetensors\"):\n",
+        "      from safetensors.torch import load_file as load_safetensors\n",
+        "      try:\n",
+        "        test = load_safetensors(model_file)\n",
+        "        del test\n",
+        "      except:\n",
+        "        return False\n",
+        "    elif model_file.lower().endswith(\".ckpt\"):\n",
+        "      from torch import load as load_ckpt\n",
+        "      try:\n",
+        "        test = load_ckpt(model_file)\n",
+        "        del test\n",
+        "      except:\n",
+        "        return False\n",
+        "    return True\n",
         "\n",
-        "  if not model_file:\n",
-        "    if real_model_url.lower().endswith((\".ckpt\", \".safetensors\")):\n",
-        "      model_file = f\"/content{real_model_url[real_model_url.rfind('/'):]}\"\n",
-        "    else:\n",
-        "      model_file = \"/content/downloaded_model.safetensors\"\n",
-        "      if os.path.exists(model_file):\n",
-        "        !rm \"{model_file}\"\n",
+        "  else:\n",
+        "    # Downloadable model\n",
+        "    if load_diffusers:\n",
+        "      if 'huggingface.co' in real_model_url:\n",
+        "          match = re.search(r'huggingface\\.co/([^/]+)/([^/]+)', real_model_url)\n",
+        "          if match:\n",
+        "              username = match.group(1)\n",
+        "              model_name = match.group(2)\n",
+        "              model_file = f\"{username}/{model_name}\"\n",
+        "              fs = HfFileSystem()\n",
+        "              existing_folders = set(fs.ls(model_file, detail=False))\n",
+        "              necessary_folders = [ \"scheduler\", \"text_encoder\", \"text_encoder_2\", \"tokenizer\", \"tokenizer_2\", \"unet\", \"vae\" ]\n",
+        "              if all(f\"{model_file}/{folder}\" in existing_folders for folder in necessary_folders):\n",
+        "                print(\"🍃 Diffusers model identified.\")  # Will be handled by kohya\n",
+        "                return True\n",
+        "      raise ValueError(\"💥 Failed to load Diffusers model. If this model is not Diffusers, have you tried turning it off at the top of the colab?\")\n",
         "\n",
-        "  if m := re.search(r\"(?:https?://)?(?:www\\.)?huggingface\\.co/[^/]+/[^/]+/blob\", model_url):\n",
-        "    real_model_url = real_model_url.replace(\"blob\", \"resolve\")\n",
-        "  elif m := re.search(r\"(?:https?://)?(?:www\\\\.)?civitai\\.com/models/([0-9]+)(/[A-Za-z0-9-_]+)?\", model_url):\n",
-        "    if m.group(2):\n",
-        "      model_file = f\"/content{m.group(2)}.safetensors\"\n",
-        "    if m := re.search(r\"modelVersionId=([0-9]+)\", model_url):\n",
-        "      real_model_url = f\"https://civitai.com/api/download/models/{m.group(1)}\"\n",
-        "    else:\n",
-        "      raise ValueError(\"optional_custom_training_model_url contains a civitai link, but the link doesn't include a modelVersionId. You can also right click the download button to copy the direct download link.\")\n",
+        "    # Define local filename\n",
+        "    if not model_file:\n",
+        "      if real_model_url.lower().endswith((\".ckpt\", \".safetensors\")):\n",
+        "        model_file = f\"/content{real_model_url[real_model_url.rfind('/'):]}\"\n",
+        "      else:\n",
+        "        model_file = \"/content/downloaded_model.safetensors\"\n",
+        "        if os.path.exists(model_file):\n",
+        "          !rm \"{model_file}\"\n",
         "\n",
-        "  !aria2c \"{real_model_url}\" --console-log-level=warn -c -s 16 -x 16 -k 10M -d / -o \"{model_file}\"\n",
+        "    # HuggingFace\n",
+        "    if m := re.search(r\"(?:https?://)?(?:www\\.)?huggingface\\.co/[^/]+/[^/]+/blob\", real_model_url):\n",
+        "      real_model_url = real_model_url.replace(\"blob\", \"resolve\")\n",
+        "    # Civitai\n",
+        "    elif m := re.search(r\"(?:https?://)?(?:www\\\\.)?civitai\\.com/models/([0-9]+)(/[A-Za-z0-9-_]+)?\", real_model_url):\n",
+        "      if m.group(2):\n",
+        "        model_file = f\"/content{m.group(2)}.safetensors\"\n",
+        "      if m := re.search(r\"modelVersionId=([0-9]+)\", real_model_url):\n",
+        "        real_model_url = f\"https://civitai.com/api/download/models/{m.group(1)}\"\n",
+        "      else:\n",
+        "        raise ValueError(\"💥 optional_custom_training_model contains a civitai link, but the link doesn't include a modelVersionId. You can also right click the download button to copy the direct download link.\")\n",
         "\n",
-        "  if not os.path.exists(vae_file):\n",
-        "    !aria2c \"{vae_url}\" --console-log-level=warn -c -s 16 -x 16 -k 10M -d / -o \"{vae_file}\"\n",
+        "    # Download checkpoint\n",
+        "    !aria2c \"{real_model_url}\" --console-log-level=warn -c -s 16 -x 16 -k 10M -d / -o \"{model_file}\"\n",
         "\n",
-        "  if model_file.lower().endswith(\".safetensors\"):\n",
-        "    from safetensors.torch import load_file as load_safetensors\n",
-        "    try:\n",
-        "      test = load_safetensors(model_file)\n",
-        "      del test\n",
-        "    except:\n",
-        "      #if \"HeaderTooLarge\" in str(e):\n",
-        "      new_model_file = os.path.splitext(model_file)[0]+\".ckpt\"\n",
-        "      !mv \"{model_file}\" \"{new_model_file}\"\n",
-        "      model_file = new_model_file\n",
-        "      print(f\"Renamed model to {os.path.splitext(model_file)[0]}.ckpt\")\n",
+        "    # Download VAE\n",
+        "    if not os.path.exists(vae_file):\n",
+        "      !aria2c \"{vae_url}\" --console-log-level=warn -c -s 16 -x 16 -k 10M -d / -o \"{vae_file}\"\n",
         "\n",
-        "  if model_file.lower().endswith(\".ckpt\"):\n",
-        "    from torch import load as load_ckpt\n",
-        "    try:\n",
-        "      test = load_ckpt(model_file)\n",
-        "      del test\n",
-        "    except:\n",
-        "      return False\n",
+        "    # Validation\n",
+        "\n",
+        "    if model_file.lower().endswith(\".safetensors\"):\n",
+        "      from safetensors.torch import load_file as load_safetensors\n",
+        "      try:\n",
+        "        test = load_safetensors(model_file)\n",
+        "        del test\n",
+        "      except:\n",
+        "        new_model_file = os.path.splitext(model_file)[0]+\".ckpt\"\n",
+        "        !mv \"{model_file}\" \"{new_model_file}\"\n",
+        "        model_file = new_model_file\n",
+        "        print(f\"Renamed model to {os.path.splitext(model_file)[0]}.ckpt\")\n",
+        "\n",
+        "    if model_file.lower().endswith(\".ckpt\"):\n",
+        "      from torch import load as load_ckpt\n",
+        "      try:\n",
+        "        test = load_ckpt(model_file)\n",
+        "        del test\n",
+        "      except:\n",
+        "        return False\n",
         "\n",
         "  return True\n",
         "\n",
@@ -586,9 +637,11 @@
         "    print(\"\\n✅ Dependencies already installed.\")\n",
         "\n",
         "  if old_model_url != model_url or not model_file or not os.path.exists(model_file):\n",
-        "    print(\"\\n🔄 Downloading model...\")\n",
+        "    print(\"\\n🔄 Getting model...\")\n",
         "    if not download_model():\n",
-        "      print(\"\\n💥 Error: The model you selected is invalid or corrupted, or couldn't be downloaded. You can use a civitai or huggingface link, or any direct download link.\")\n",
+        "      print(\"\\n💥 Error: The model you specified is invalid or corrupted.\"\n",
+        "            \"\\nIf you're using an URL, please check that the model is accessible without being logged in.\"\n",
+        "            \"\\nYou can try civitai or huggingface URLs, or a path in your Google Drive starting with /content/drive/MyDrive\")\n",
         "      return\n",
         "    print()\n",
         "  else:\n",
@@ -605,7 +658,8 @@
         "    display(Markdown(\"### ✅ Done! [Go download your Lora from Google Drive](https://drive.google.com/drive/my-drive)\\n\"\n",
         "                     \"### There will be several files, you should try the latest version (the file with the largest number next to it)\"))\n",
         "\n",
-        "main()"
+        "main()\n",
+        "\n"
       ]
     },
     {
