--- a/Fix_Lora_Trainer_XL.ipynb
+++ b/Fix_Lora_Trainer_XL.ipynb
@@ -228,7 +228,7 @@
         "\n",
         "#@markdown ### ▶️ Advanced\n",
         "#@markdown El optimizador es el algoritmo utilizado para el entrenamiento. AdanW8Bit es el predeterminado y funciona muy bien, mientras que Prodigy administra la tasa de aprendizaje automáticamente y puede tener varias ventajas, como entrenar más rápido debido a que necesita menos pasos, así como trabajar mejor para conjuntos de datos pequeños.\n",
-        "optimizer = \"AdamW8bit\" #@param [\"AdamW8bit\", \"Prodigy\", \"DAdaptation\", \"DadaptAdam\", \"DadaptLion\", \"AdamW\", \"Lion\", \"SGDNesterov\", \"SGDNesterov8bit\", \"AdaFactor\"]\n",
+        "optimizer = \"AdamW8bit\" #@param [\"AdamW8bit\", \"CAME\", \"Prodigy\", \"DAdaptation\", \"DadaptAdam\", \"DadaptLion\", \"AdamW\", \"Lion\", \"SGDNesterov\", \"SGDNesterov8bit\", \"AdaFactor\"]\n",
         "#@markdown Argumentos recomendados para AdamW8bit: `weight_decay=0.1 betas=[0.9,0.99]`<p>\n",
         "#@markdown Argumentos recomendados para Prodigy: `decouple=True weight_decay=0.01 betas=[0.9,0.999] d_coef=2 use_bias_correction=True safeguard_warmup=True`<p>\n",
         "#@markdown Argumentos recomendados para Adafactor: `scale_parameter=False relative_step=False warmup_init=False`\n",
@@ -237,8 +237,8 @@
         "optimizer_args = [a.strip() for a in optimizer_args.split(' ') if a]\n",
         "#@markdown Si se selecciona Dadapt o Prodigy y se marca la casilla recomendada, los siguientes valores recomendados anularán cualquier configuración anterior:<p>\n",
         "#@markdown `unet_lr=0.75`, `text_encoder_lr=0.75`, `network_alpha=network_dim`<p>\n",
-        "#markdown If CAME + REX is selected and the recommended box is checked, the following recommended values will override any previous settings:<p>\n",
-        "#markdown `unet_lr=1e-4`, `text_encoder_lr=1e-6, betas=default_came_betas`\n",
+        "#@markdown Si se selecciona CAME + REX y se marca la casilla recomendada, los siguientes valores recomendados anularán cualquier configuración anterior:<p>\n",
+        "#@markdown `unet_lr=1e-4`, `text_encoder_lr=1e-6, betas=default_came_betas`\n",
         "recommended_values = True #@param {type:\"boolean\"}\n",
         "\n",
         "if any(opt in optimizer.lower() for opt in [\"dadapt\", \"prodigy\"]):\n",
@@ -299,7 +299,7 @@
         "\n",
         "  !apt -y update -qq\n",
         "  !apt -y install aria2 -qq\n",
-        "  !pip install torch==2.3.1+cu121 accelerate==0.19.0 transformers==4.30.2 diffusers==0.18.2 bitsandbytes==0.40.0.post4 opencv-python==4.7.0.68 jax==0.4.23 jaxlib==0.4.23\n",
+        "  !pip install torch==2.4.0+cu121 accelerate==0.19.0 transformers==4.30.2 diffusers==0.18.2 bitsandbytes==0.40.0.post4 opencv-python==4.7.0.68 jax==0.4.23 jaxlib==0.4.23\n",
         "  !pip install pytorch-lightning==1.9.0 voluptuous==0.13.1 toml==0.10.2 ftfy==6.1.1 einops==0.6.0 safetensors pygments\n",
         "  !pip install huggingface-hub invisible-watermark==0.2.0 open-clip-torch==2.20.0 dadaptation==3.1 prodigyopt==1.0 lion-pytorch==0.1.2 wandb\n",
         "  !pip install -e .\n",
@@ -760,7 +760,7 @@
       "source": [
         "#@markdown ### 🔢 Contar conjuntos de datos\n",
         "#@markdown Google Drive hace imposible contar los archivos en una carpeta, por lo que le mostrará el recuento de archivos en todas las carpetas y subcarpetas.\n",
-        "folder = \"/content/drive/MyDrive/Loras/ryomou_shimei/dataset\" #@param {type:\"string\"}\n",
+        "folder = \"/content/drive/MyDrive/Loras/ejemplo/dataset\" #@param {type:\"string\"}\n",
         "\n",
         "import os\n",
         "from google.colab import drive\n",
