--- a/Fix_Lora_Trainer_XL.ipynb
+++ b/Fix_Lora_Trainer_XL.ipynb
@@ -228,7 +228,7 @@
         "\n",
         "#@markdown ### ▶️ Advanced\n",
         "#@markdown El optimizador es el algoritmo utilizado para el entrenamiento. AdanW8Bit es el predeterminado y funciona muy bien, mientras que Prodigy administra la tasa de aprendizaje automáticamente y puede tener varias ventajas, como entrenar más rápido debido a que necesita menos pasos, así como trabajar mejor para conjuntos de datos pequeños.\n",
-        "optimizer = \"AdamW8bit\" #@param [\"AdamW8bit\", \"CAME\", \"Prodigy\", \"DAdaptation\", \"DadaptAdam\", \"DadaptLion\", \"AdamW\", \"Lion\", \"SGDNesterov\", \"SGDNesterov8bit\", \"AdaFactor\"]\n",
+        "optimizer = \"AdamW8bit\" #@param [\"AdamW8bit\", \"Prodigy\", \"DAdaptation\", \"DadaptAdam\", \"DadaptLion\", \"AdamW\", \"Lion\", \"SGDNesterov\", \"SGDNesterov8bit\", \"AdaFactor\"]\n",
         "#@markdown Argumentos recomendados para AdamW8bit: `weight_decay=0.1 betas=[0.9,0.99]`<p>\n",
         "#@markdown Argumentos recomendados para Prodigy: `decouple=True weight_decay=0.01 betas=[0.9,0.999] d_coef=2 use_bias_correction=True safeguard_warmup=True`<p>\n",
         "#@markdown Argumentos recomendados para Adafactor: `scale_parameter=False relative_step=False warmup_init=False`\n",
@@ -236,9 +236,9 @@
         "optimizer_args = \"weight_decay=0.1 betas=[0.9,0.99]\" #@param {type:\"string\"}\n",
         "optimizer_args = [a.strip() for a in optimizer_args.split(' ') if a]\n",
         "#@markdown Si se selecciona Dadapt o Prodigy y se marca la casilla recomendada, los siguientes valores recomendados anularán cualquier configuración anterior:<p>\n",
-        "#@markdown `unet_lr=0.75`, `text_encoder_lr=0.75`, `network_alpha=network_dim`<p>\n",
-        "#@markdown Si se selecciona CAME + REX y se marca la casilla recomendada, los siguientes valores recomendados anularán cualquier configuración anterior:<p>\n",
-        "#@markdown `unet_lr=1e-4`, `text_encoder_lr=1e-6, betas=default_came_betas`\n",
+        "#markdown `unet_lr=0.75`, `text_encoder_lr=0.75`, `network_alpha=network_dim`<p>\n",
+        "#markdown Si se selecciona CAME + REX y se marca la casilla recomendada, los siguientes valores recomendados anularán cualquier configuración anterior:<p>\n",
+        "#markdown `unet_lr=1e-4`, `text_encoder_lr=1e-6, betas=default_came_betas`\n",
         "recommended_values = True #@param {type:\"boolean\"}\n",
         "\n",
         "if any(opt in optimizer.lower() for opt in [\"dadapt\", \"prodigy\"]):\n",
