Added option to upload trained lora to huggingface

--- a/Fix_Lora_Trainer_XL.ipynb
+++ b/Fix_Lora_Trainer_XL.ipynb
@@ -725,35 +725,6 @@
       "execution_count": null,
       "metadata": {
         "cellView": "form",
-        "id": "1RfwB4UB3M_w"
-      },
-      "outputs": [],
-      "source": [
-        "#@markdown ### 📂 Descomprimir conjunto de datos\n",
-        "#@markdown Es mucho más lento cargar archivos individuales en drive, por lo que es posible que desee cargar un archivo zip si tiene su conjunto de datos en su computadra, aqui puedes descomprimirlo.\n",
-        "zip = \"/content/drive/MyDrive/my_dataset.zip\" #@param {type:\"string\"}\n",
-        "extract_to = \"/content/drive/MyDrive/Loras/example/dataset\" #@param {type:\"string\"}\n",
-        "\n",
-        "import os, zipfile\n",
-        "\n",
-        "if not os.path.exists('/content/drive'):\n",
-        "  from google.colab import drive\n",
-        "  print(\"📂 Connecting to Google Drive...\")\n",
-        "  drive.mount('/content/drive')\n",
-        "\n",
-        "os.makedirs(extract_to, exist_ok=True)\n",
-        "\n",
-        "with zipfile.ZipFile(zip, 'r') as f:\n",
-        "  f.extractall(extract_to)\n",
-        "\n",
-        "print(\"✅ Done\")"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "cellView": "form",
         "id": "5ACrHePi3Pen"
       },
       "outputs": [],
@@ -783,6 +754,136 @@
         "\n",
         "pad = max(len(k) for k in tree)\n",
         "print(\"\\n\".join(f\"📁{k.ljust(pad)} | {v}\" for k, v in tree.items() if v))"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "cellView": "form",
+        "id": "8YlP0cNQyujy"
+      },
+      "outputs": [],
+      "source": [
+        "#@markdown ## HuggingFace 🤗\n",
+        "from huggingface_hub import login\n",
+        "from huggingface_hub import HfApi\n",
+        "from huggingface_hub.utils import validate_repo_id, HfHubHTTPError\n",
+        "\n",
+        "# @markdown crea una cuenta de HuggingFace [aquí](https://huggingface.co/) o si ya la tienes simplemente usa tu token 👇\n",
+        "# @markdown > Obten **tú** token `EN WRITE` de Huggingface [aquí](https://huggingface.co/settings/tokens) 👈\n",
+        "write_token = \"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\"  # @param {type:\"string\"}\n",
+        "#@markdown Complete esto si desea cargarlo en su organización, o simplemente déjelo vacío.\n",
+        "orgs_name = \"\"  # @param{type:\"string\"}\n",
+        "# @markdown Si su repositorio de modelo/conjunto de datos no existe, lo creará automáticamente.\n",
+        "#@markdown No se permiten espacios usa `un guión bajo` para nombres largos\n",
+        "model_name = \"Mi_lora\"  # @param{type:\"string\"}\n",
+        "#@markdown dejalo en blanco no se usa\n",
+        "dataset_name = \"\"  # @param{type:\"string\"}\n",
+        "#@markdown Marca esta casilla si quieres que tu repositorio sea privado de lo contrario sera publico\n",
+        "make_private = True  # @param{type:\"boolean\"}\n",
+        "\n",
+        "def authenticate(write_token):\n",
+        "    login(write_token, add_to_git_credential=True)\n",
+        "    api = HfApi()\n",
+        "    return api.whoami(write_token), api\n",
+        "\n",
+        "\n",
+        "def create_repo(api, user, orgs_name, repo_name, repo_type, make_private=False):\n",
+        "    global model_repo\n",
+        "    global datasets_repo\n",
+        "\n",
+        "    if orgs_name == \"\":\n",
+        "        repo_id = user[\"name\"] + \"/\" + repo_name.strip()\n",
+        "    else:\n",
+        "        repo_id = orgs_name + \"/\" + repo_name.strip()\n",
+        "\n",
+        "    try:\n",
+        "        validate_repo_id(repo_id)\n",
+        "        api.create_repo(repo_id=repo_id, repo_type=repo_type, private=make_private)\n",
+        "        print(f\"{repo_type.capitalize()} repo '{repo_id}' didn't exist, creating repo\")\n",
+        "    except HfHubHTTPError as e:\n",
+        "        print(f\"{repo_type.capitalize()} repo '{repo_id}' exists, skipping create repo\")\n",
+        "\n",
+        "    if repo_type == \"model\":\n",
+        "        model_repo = repo_id\n",
+        "        print(f\"{repo_type.capitalize()} repo '{repo_id}' link: https://huggingface.co/{repo_id}\\n\")\n",
+        "    else:\n",
+        "        datasets_repo = repo_id\n",
+        "        print(f\"{repo_type.capitalize()} repo '{repo_id}' link: https://huggingface.co/datasets/{repo_id}\\n\")\n",
+        "\n",
+        "user, api = authenticate(write_token)\n",
+        "\n",
+        "if model_name:\n",
+        "    create_repo(api, user, orgs_name, model_name, \"model\", make_private)\n",
+        "if dataset_name:\n",
+        "    create_repo(api, user, orgs_name, dataset_name, \"dataset\", make_private)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#@markdown ##Subir a través de huggingface_hub (Lora) 🤗\n",
+        "\n",
+        "from huggingface_hub import HfApi\n",
+        "from pathlib import Path\n",
+        "\n",
+        "api = HfApi()\n",
+        "file_path = \"/content/drive/MyDrive/Loras/Mi_proyecto/output/Mi_lora.safetensors\" #@param {type :\"string\"}\n",
+        "#@markdown Comentario (Opcional) puede ser util para identificar versiones del lora, `ejemplo: pony, animagine, V1, V2 etc...`\n",
+        "commit_message = \"\"  #@param {type :\"string\"}\n",
+        "\n",
+        "if file_path != \"\":\n",
+        "  path_obj = Path(file_path)\n",
+        "  trained_model = path_obj.parts[-1]\n",
+        "\n",
+        "  print(f\"Uploading {trained_model} to https://huggingface.co/\"+model_repo)\n",
+        "  print(f\"Please wait...\")\n",
+        "\n",
+        "  api.upload_file(\n",
+        "      path_or_fileobj=file_path,\n",
+        "      path_in_repo=trained_model,\n",
+        "      repo_id=model_repo,\n",
+        "      commit_message=commit_message,\n",
+        "  )\n",
+        "\n",
+        "  print(f\"Upload success, located at https://huggingface.co/\"+model_repo+\"/blob/main/\"+trained_model+\"\\n\")\n",
+        "print('¡¡Subida finalizada!!')"
+      ],
+      "metadata": {
+        "cellView": "form",
+        "id": "EVrt9JJRCxmk"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "cellView": "form",
+        "id": "1RfwB4UB3M_w"
+      },
+      "outputs": [],
+      "source": [
+        "#@markdown ### 📂 Descomprimir conjunto de datos\n",
+        "#@markdown Es mucho más lento cargar archivos individuales en drive, por lo que es posible que desee cargar un archivo zip si tiene su conjunto de datos en su computadra, aqui puedes descomprimirlo.\n",
+        "zip = \"/content/drive/MyDrive/my_dataset.zip\" #@param {type:\"string\"}\n",
+        "extract_to = \"/content/drive/MyDrive/Loras/example/dataset\" #@param {type:\"string\"}\n",
+        "\n",
+        "import os, zipfile\n",
+        "\n",
+        "if not os.path.exists('/content/drive'):\n",
+        "  from google.colab import drive\n",
+        "  print(\"📂 Connecting to Google Drive...\")\n",
+        "  drive.mount('/content/drive')\n",
+        "\n",
+        "os.makedirs(extract_to, exist_ok=True)\n",
+        "\n",
+        "with zipfile.ZipFile(zip, 'r') as f:\n",
+        "  f.extractall(extract_to)\n",
+        "\n",
+        "print(\"✅ Done\")"
       ]
     },
     {
