Added the option to upload folders to huggingface

--- a/Fix_Lora_Trainer_XL.ipynb
+++ b/Fix_Lora_Trainer_XL.ipynb
@@ -772,15 +772,17 @@
         "\n",
         "# @markdown crea una cuenta de HuggingFace [aquí](https://huggingface.co/) o si ya la tienes simplemente usa tu token 👇\n",
         "# @markdown > Obten **tú** token `EN WRITE` de Huggingface [aquí](https://huggingface.co/settings/tokens) 👈\n",
-        "write_token = \"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\"  # @param {type:\"string\"}\n",
+        "write_token = \"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\"  # @param {type:\"string\"}\n",
         "#@markdown Complete esto si desea cargarlo en su organización, o simplemente déjelo vacío.\n",
         "orgs_name = \"\"  # @param{type:\"string\"}\n",
         "# @markdown Si su repositorio de modelo/conjunto de datos no existe, lo creará automáticamente.\n",
         "#@markdown No se permiten espacios usa `un guión bajo` para nombres largos\n",
-        "model_name = \"Mi_lora\"  # @param{type:\"string\"}\n",
-        "#@markdown dejalo en blanco no se usa\n",
-        "dataset_name = \"\"  # @param{type:\"string\"}\n",
-        "#@markdown Marca esta casilla si quieres que tu repositorio sea privado de lo contrario sera publico\n",
+        "\n",
+        "#@markdown El `model_name` se usa para subir archivos individuales\n",
+        "model_name = \"\"  # @param{type:\"string\"}\n",
+        "#@markdown El dataset se usa para subir carpetas enteras.\n",
+        "dataset_name = \"loras\"  # @param{type:\"string\"}\n",
+        "#@markdown Marca esta casilla si quieres que tu repositorio/dataset sea privado de lo contrario sera publico\n",
         "make_private = True  # @param{type:\"boolean\"}\n",
         "\n",
         "def authenticate(write_token):\n",
@@ -853,6 +855,55 @@
       "metadata": {
         "cellView": "form",
         "id": "EVrt9JJRCxmk"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# @markdown ## Subir carpeta 📁 a HuggingFace 🤗\n",
+        "from huggingface_hub import HfApi\n",
+        "from pathlib import Path\n",
+        "import os\n",
+        "\n",
+        "api = HfApi()\n",
+        "\n",
+        "# @markdown Puedes subir una carpeta entera a Huggingface con tus loras entrenados, incluso puedes subir toda la carpeta de tu proyecto (incluido sub-carpetas), ten paciencia podria tardar un tiempo en cargar varios archivos.\n",
+        "folder_path = \"/content/drive/MyDrive/Loras/Mi_lora/output\"  # @param {type :\"string\"}\n",
+        "\n",
+        "# @markdown Nombre personalizado para la carpeta a subir\n",
+        "folder_name = \"Mi_lora\"  # @param {type :\"string\"}\n",
+        "\n",
+        "# @markdown Comentario (Opcional)\n",
+        "commit_message = \"\"  # @param {type :\"string\"}\n",
+        "\n",
+        "if not commit_message:\n",
+        "    commit_message = \"feat: upload folder\"\n",
+        "\n",
+        "def upload_folder(folder_path, folder_name):\n",
+        "    print(f\"Uploading {folder_name} to https://huggingface.co/datasets/{datasets_repo}\")\n",
+        "    print(\"Please wait...\")\n",
+        "\n",
+        "    api.upload_folder(\n",
+        "        folder_path=folder_path,\n",
+        "        path_in_repo=folder_name,\n",
+        "        repo_id=datasets_repo,\n",
+        "        repo_type=\"dataset\",\n",
+        "        commit_message=commit_message,\n",
+        "        ignore_patterns=\".ipynb_checkpoints\",\n",
+        "    )\n",
+        "    print(f\"Carga terminada, puedes encontrarlo en https://huggingface.co/datasets/{datasets_repo}/tree/main/{folder_name}\\n\")\n",
+        "\n",
+        "def upload():\n",
+        "    if folder_path:\n",
+        "        upload_folder(folder_path, folder_name)\n",
+        "\n",
+        "upload()\n"
+      ],
+      "metadata": {
+        "cellView": "form",
+        "id": "68XMHMLe--If"
       },
       "execution_count": null,
       "outputs": []
