Step calculator for lora training added

--- a/Fix_Lora_Trainer_XL.ipynb
+++ b/Fix_Lora_Trainer_XL.ipynb
@@ -758,6 +758,35 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "#@markdown ##Calculador de Repeticiones ⌛📝\n",
+        "#@markdown Calcula el número de repeticiones a usar para entrenar tu lora, Recuerda que en `SDXL y Pony` se usa un batch de `4`.\n",
+        "#@markdown Si usas colab pro calcula tus repeticiones con `8` de batch size\n",
+        "# Define las Variables\n",
+        "# Número de imágenes\n",
+        "num_images = 40 # @param{type:\"number\"}\n",
+        "# Número de repeticiones\n",
+        "num_repeats = 4 # @param{type:\"number\"}\n",
+        "# Número de epocas\n",
+        "num_epochs = 10 # @param{type:\"number\"}\n",
+        "# Tamaño de lote\n",
+        "batch_size = 4 # @param{type:\"number\"}\n",
+        "\n",
+        "# Calcula el resultado\n",
+        "resultado = (num_images * num_repeats * num_epochs) / batch_size\n",
+        "\n",
+        "# Muestra el resultado\n",
+        "print(\"\\33[96mEl total de repeticiones es:\\033[0m\", resultado)\n"
+      ],
+      "metadata": {
+        "cellView": "form",
+        "id": "ImAtduziVp5h"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
       "metadata": {
         "cellView": "form",
