fixed XFORMERS changed AdamW8bit by AdaFactor

--- a/Fix_Lora_Trainer_XL.ipynb
+++ b/Fix_Lora_Trainer_XL.ipynb
@@ -228,12 +228,12 @@
         "\n",
         "#@markdown ### ▶️ Advanced\n",
         "#@markdown El optimizador es el algoritmo utilizado para el entrenamiento. AdanW8Bit es el predeterminado y funciona muy bien, mientras que Prodigy administra la tasa de aprendizaje automáticamente y puede tener varias ventajas, como entrenar más rápido debido a que necesita menos pasos, así como trabajar mejor para conjuntos de datos pequeños.\n",
-        "optimizer = \"AdamW8bit\" #@param [\"AdamW8bit\", \"Prodigy\", \"DAdaptation\", \"DadaptAdam\", \"DadaptLion\", \"AdamW\", \"Lion\", \"SGDNesterov\", \"SGDNesterov8bit\", \"AdaFactor\"]\n",
+        "optimizer = \"AdaFactor\" #@param [\"AdamW8bit\", \"Prodigy\", \"DAdaptation\", \"DadaptAdam\", \"DadaptLion\", \"AdamW\", \"Lion\", \"SGDNesterov\", \"SGDNesterov8bit\", \"AdaFactor\"]\n",
         "#@markdown Argumentos recomendados para AdamW8bit: `weight_decay=0.1 betas=[0.9,0.99]`<p>\n",
         "#@markdown Argumentos recomendados para Prodigy: `decouple=True weight_decay=0.01 betas=[0.9,0.999] d_coef=2 use_bias_correction=True safeguard_warmup=True`<p>\n",
         "#@markdown Argumentos recomendados para Adafactor: `scale_parameter=False relative_step=False warmup_init=False`\n",
         "#markdown Recommended args for CAME: `weight_decay=0.04`\n",
-        "optimizer_args = \"weight_decay=0.1 betas=[0.9,0.99]\" #@param {type:\"string\"}\n",
+        "optimizer_args = \"scale_parameter=False relative_step=False warmup_init=False\" #@param {type:\"string\"}\n",
         "optimizer_args = [a.strip() for a in optimizer_args.split(' ') if a]\n",
         "#@markdown Si se selecciona Dadapt o Prodigy y se marca la casilla recomendada, los siguientes valores recomendados anularán cualquier configuración anterior:<p>\n",
         "#markdown `unet_lr=0.75`, `text_encoder_lr=0.75`, `network_alpha=network_dim`<p>\n",
@@ -304,7 +304,7 @@
         "  !pip install huggingface-hub invisible-watermark==0.2.0 open-clip-torch==2.20.0 dadaptation==3.1 prodigyopt==1.0 lion-pytorch==0.1.2 wandb\n",
         "  !pip install -e .\n",
         "  if cross_attention == \"xformers\":\n",
-        "    !pip install -q xformers==0.0.26.dev778\n",
+        "    !pip install -q xformers\n",
         "  if \"CAME\" in optimizer:\n",
         "    !pip install came-pytorch\n",
         "    !wget https://raw.githubusercontent.com/hollowstrawberry/kohya-colab/main/train_util.py -q -O library/train_util.py\n",
